frontend/src/components/home/Home.css
.home {
  position: relative;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.intro {
  max-width: 540px;
  text-align: center;
  z-index: 10;
}

.home__img {
  margin-bottom: 1.5rem;
}

.home__name {
  font-size: var(--h1-font-size);
  font-weight: var(--font-bold);
  margin-bottom: 0.5rem;
}

.home__socials {
  display: flex;
  column-gap: 1.75rem;
  margin: 1.5rem 0;
}

.home__social-link {
  color: var(--title-color);
  font-size: 1.3rem;
  transition: 0.3s;
}

.home__social-link:hover {
  color: hsl(43, 100%, 68%);
}

.scroll__down {
  position: absolute;
  bottom: 2.5rem;
  left: 0;
  width: 100%;
}

.home__scroll-name {
  font-size: var(--small-font-size);
  color: var(--title-color);
}

.mouse {
  border: 2px solid #454360;
  display: block;
  height: 1.6rem;
  width: 1.25rem;
  margin: auto;
  margin-top: 0.75rem;
  border-radius: 1rem;
  position: relative;
}

@keyframes ani-mouse {
  0% {
    top: 29%;
  }

  15% {
    top: 50%;
  }

  50% {
    top: 50%;
  }

  100% {
    top: 29%;
  }
}

.wheel {
  background-color: var(--title-color);
  border-radius: 100%;
  width: 0.25rem;
  height: 0.25rem;
  position: absolute;
  top: 0.5rem;
  left: 50%;
  transform: translateX(-50%);
  animation: ani-mouse 2s linear infinite;
}

.shapes {
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
}

.shape {
  position: absolute;
  animation: float 10s linear infinite;
  transform-origin: center center;
}

.s1 {
  left: 2%;
  top: 10%;
  animation-delay: 0s;
}

.s2 {
  left: 18%;
  top: 30%;
  animation-delay: 0.2s;
}

.s3 {
  left: 5%;
  bottom: 30%;
  animation-delay: 0.4s;
}

.s4 {
  left: 2%;
  bottom: 10%;
  animation-delay: 0.6s;
}

.s5 {
  left: 44%;
  top: 10%;
  animation-delay: 0.8s;
}

.s6 {
  left: 36%;
  bottom: 10%;
  animation-delay: 1s;
}

.s7 {
  top: 20%;
  right: 25%;
  animation-delay: 1.2s;
}

.s8 {
  right: 24%;
  bottom: 20%;
  animation-delay: 1.4s;
}

.s9 {
  right: 2%;
  top: 10%;
  animation-delay: 1.6s;
}

.s10 {
  top: 45%;
  right: 11%;
  animation-delay: 1.8s;
}

.s11 {
  bottom: 10%;
  right: 2%;
  animation-delay: 2s;
}

@keyframes float {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

